<resources>
    <string name="app_name">task5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moscow">Moscow</string>
    <string name="sochi">Sochi</string>
    <string name="vladivostok">Vladivostok</string>
    <string name="voronezh">Voronezh</string>
    <string name="rostov">Rostov</string>
    <string name="dubai">Dubai</string>
    <string name="paris">Paris</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="Enter">Enter</string>
    <string name="enterCity">Enter City</string>
    <string name="cityError">Неправильно введен город</string>
    <string name="picturerain">pictureRain</string>
    <string name="dubaiscreen">Dubai</string>
    <string name="_30">+30</string>
    <string name="_3_5_m_s">3-5 m/s</string>
    <string name="_720mm">720mm</string>
    <string name="open_in_browser">open in browser</string>
    <string name="default_Url">https://geekbrains.ru</string>
    <string name="moscowUrl">https://en.wikipedia.org/wiki/Moscow</string>
    <string name="stPetersburgUrl">https://en.wikipedia.org/wiki/Saint_Petersburg</string>
    <string name="newYorkUrl">https://en.wikipedia.org/wiki/New_York_City</string>
    <string name="londonUrl">https://en.wikipedia.org/wiki/London</string>
    <string name="parisUrl">https://en.wikipedia.org/wiki/Paris</string>
    <string name="dubaiUrl">https://en.wikipedia.org/wiki/Dubai</string>
    <string-array name="time">
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
    </string-array>
    <string-array name="time_temperature">
        <item>+24</item>
        <item>+25</item>
        <item>+27</item>
        <item>+29</item>
        <item>+30</item>
        <item>+30</item>
        <item>+27</item>
        <item>+26</item>
        <item>+25</item>
        <item>+24</item>

    </string-array>
    <string name="about">about</string>
    <string name="developed">developed by Andrey Sozonov 2020</string>
    <string name="settings">Settings</string>
    <string name="city_error">Неправильно введен город</string>
    <string name="connection_error">Connection failed</string>
    <string name="history">History</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>


</resources>
